# opla

./: .gitignore  .hintrc  .releaserc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package-lock.json  package.json
.github/: dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: fix-pre-release.yml  modify-updater-with-latest-release.yml  publish-pre-release.yml  publish.yml  static.yml  test.yml  update.llama.cpp.binaries.yml  update.llamacpp.binaries.yml
.husky/: pre-commit
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/engines/: Cargo.toml  README.md
crates/tokenizer/: Cargo.toml
crates/tokenizer/src/: encodings.rs  lib.rs
docs/: .nojekyll  docusaurus.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts
docs/blog/: authors.yml
docs/blog/2024-03-08-welcome/: index.md
docs/docs/: intro.md
docs/docs/tutorial-basics/: _category_.json  markdown-features.mdx
docs/plugins/: tailwindPlugin.ts
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
webapp/: .eslintrc.json  .prettierignore  .prettierrc.json  .taurignore  README.md  components.json  eslint.config.mjs  instrumentation.ts  lint-staged.config.js  lint-staged.config.mjs  next.config.js  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  prettier.config.mjs  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.mjs  tailwind.config.ts  tsconfig.json
webapp/app/: global-error.tsx  globals.css
webapp/assets/: opla_default_config.json
webapp/components/: Card.tsx  ContextMenu.tsx  Conversation.tsx  Dialog.tsx  Explorer.tsx  Layout.tsx  Menu.tsx  Message.tsx  Modal.tsx  Model.tsx  ModelsExplorer.tsx  NavContainer.tsx  Parameter.tsx  Portal.tsx  Prompt.tsx  Provider.tsx  ProviderConfiguration.tsx  ProviderEdit.tsx  ProvidersExplorer.tsx  Searchbar.tsx  SettingsContainer.tsx  Sidebar.tsx  Thread.tsx  ToggleTheme.tsx  Tooltip.tsx
webapp/components/Dropdown/: index.tsx
webapp/components/Sidebar/: SidebarItem.tsx  index.tsx
webapp/components/assistants/: Assistant.tsx  EditTarget.tsx  EditTargetDialog.tsx  Explorer.tsx  TargetsTable.tsx  index.tsx
webapp/components/icons/: Dot.tsx  OpenAI.tsx  Opla.tsx
webapp/components/models/: Explorer.tsx  Model.tsx  ModelsExplorer.tsx  NewLocalModel.tsx  SearchHuggingFaceHub.tsx  index.tsx
webapp/components/providers/: Configuration.tsx  Explorer.tsx  Provider.tsx  Toolbar.tsx  index.tsx
webapp/components/threads/: Archive.tsx  Conversation.tsx  Explorer.tsx  Message.tsx  Presets.tsx  Prompt.tsx  PromptCommand.tsx  PromptCommandInput.tsx  PromptsGrid.tsx  Settings.tsx  Thread.tsx  ThreadMenu.tsx  index.tsx
webapp/components/ui/: accordion.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  hover-card.tsx  input-icon.tsx  input.tsx  label.tsx  popover.tsx  progress.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sonner.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  toggle.tsx  tooltip.tsx
webapp/context/: index.tsx  modals.tsx
webapp/desktop/: .gitignore  Cargo.toml  README.md  tauri.conf.json
webapp/desktop/icons/: icon.icns
webapp/desktop/src/: main.rs
webapp/hooks/: useAutoResizeTextArea.ts  useBackend.ts  useBackendContext.tsx  useClickOutside.ts  useCollectionStorage.ts  useDataStorage.ts  useDebounceFunc.ts  useFetch.ts  useFetch.tsx  useHover.ts  useMarkdownProcessor.tsx  useParameters.ts  useProviderState.ts  useRegisterModals.tsx  useScroll.ts  useShortcuts.tsx  useTheme.ts  useToggle.ts  useTranslation.ts
webapp/i18n/: config.ts
webapp/lib/: utils.ts
webapp/modals/: context.tsx  index.tsx
webapp/native/: .gitignore  .prettierrc.json  Cargo.toml  Tauri.windows.toml  opla_default_config.json  tauri.conf.json
webapp/native/assets/: default_presets.json  default_providers.json  opla_default_config.json
webapp/native/binaries/llama.cpp/: llama.cpp.server-aarch64-apple-darwin  llama.cpp.server-x86_64-apple-darwin  llama.cpp.server-x86_64-unknown-linux-gnu
webapp/native/src/: config.rs  downloader.rs  error.rs  hash.rs  llm.rs  local_server.rs  main.rs  models.rs  server.rs  store.rs  sys.rs  ui.rs  utils.rs
webapp/native/src/api/: assistants.rs  hf.rs  mod.rs  models.rs
webapp/native/src/commands/: asset.rs  assistant.rs  llm.rs  mod.rs  model.rs  provider.rs  server.rs  thread.rs
webapp/native/src/data/: mod.rs
webapp/native/src/data/asset/: mod.rs
webapp/native/src/data/assistant/: mod.rs
webapp/native/src/data/conversation/: mod.rs
webapp/native/src/data/message/: mod.rs
webapp/native/src/data/model/: mod.rs
webapp/native/src/data/provider/: mod.rs
webapp/native/src/data/service/: mod.rs
webapp/native/src/data/workspace/: mod.rs  project.rs
webapp/native/src/engines/: llama_cpp.rs  mod.rs
webapp/native/src/llm/: llama_cpp.rs  mod.rs  openai.rs
webapp/native/src/macos/: mod.rs
webapp/native/src/providers/: llama_cpp.rs  llm.rs  mod.rs  openai.rs  services.rs
webapp/native/src/store/: app_state.rs  assistant.rs  assistant_storage.rs  conversation_storage.rs  mod.rs  model.rs  model_storage.rs  preset.rs  provider.rs  provider_storage.rs  server.rs  server_storage.rs  service.rs  service_storage.rs  settings.rs  thread.rs  thread_storage.rs  workspace.rs  workspace_storage.rs
webapp/native/src/utils/: http_client.rs  image.rs  mod.rs
webapp/pages/: _app.tsx  _document.tsx  _error.tsx  index.tsx
webapp/stores/: assistant.ts  assistants.ts  constants.ts  conversation.ts  index.ts  model.ts  preset.ts  provider.ts  server.ts  service.ts  settings.ts  storage.ts  thread.ts  types.ts  usage.ts  workspace.ts
webapp/types/: backend.ts  gguf.ts  index.ts  ui.ts
webapp/utils/: caretPosition.ts  caretposition.ts  constants.ts  conversations.ts  dataStorage.ts  download.ts  logger.ts  misc.ts  modalsProvider.tsx  prompt.ts  shortcuts.ts  string.ts  tauri.ts  ui.ts
(+265 files in other folders)
