[package]
name = "opla"
version = "0.1.0"
edition = "2021"
default-run = "opla-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
path = "crates/cli/src/main.rs"
name = "opla-cli"

[workspace]
members = [
  "crates/api",
  "crates/cli",
  "crates/core",
  "crates/engines",
  "crates/workflows",
  "webapp/native"
]

[dependencies]
