[package]
name = "app"
version = "1.0.0-alpha.208"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.1", features = [ "updater", "fs-read-dir", "protocol-asset", "fs-remove-file", "fs-create-dir", "fs-remove-dir", "fs-read-file", "fs-write-file", "fs-exists", "http-all", "dialog-all", "path-all", "shell-execute", "shell-open", "shell-sidecar", "window-all"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
sysinfo = { version = "0.30.13", features = ["apple-app-store"] }
dirs = "5.0.1"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
chrono = "0.4.38"
serde_with = { version = "3.9.0", features = ["json"] }
uuid = { version = "1.10.0", features = ["v4"] }
void = "1.0.2"
thiserror = "1.0.63"
eventsource-stream = "0.2.3"
futures-util = "0.3.30"
tokio = { version = "1.39.2", features = ["sync"] }
tokenizer = { path = "../../crates/tokenizer"}
opla_core = { path = "../../crates/core"}
sha2 = "0.10.8"
async-trait = "0.1.81"
dyn-clone = "1.0.17"
bytes = "1.6.1"
regex = "1.10.4"
phf = "0.11.2"
showfile = "0.1.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
# default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
