[package]
name = "app"
version = "1.0.0-alpha.239"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.1", features = [ "updater", "fs-read-dir", "protocol-asset", "fs-remove-file", "fs-create-dir", "fs-remove-dir", "fs-read-file", "fs-write-file", "fs-exists", "http-all", "dialog-all", "path-all", "shell-execute", "shell-open", "shell-sidecar", "window-all"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
sysinfo = { version = "0.33.1", features = ["apple-app-store"] }
dirs = "6.0.0"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
chrono = "0.4.40"
serde_with = { version = "3.12.0", features = ["json"] }
uuid = { version = "1.15.1", features = ["v4"] }
void = "1.0.2"
thiserror = "2.0.12"
eventsource-stream = "0.2.3"
futures-util = "0.3.31"
tokio = { version = "1.44.0", features = ["sync"] }
tokenizer = { path = "../../crates/tokenizer"}
opla_core = { path = "../../crates/core"}
sha2 = "0.10.8"
async-trait = "0.1.87"
dyn-clone = "1.0.18"
bytes = "1.10.0"
regex = "1.11.1"
phf = "0.11.3"
showfile = "0.1.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
objc = "0.2.7"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
# default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
